# ensc351

./: .gitignore
SmartDoorbell/: .gitignore  server.js
SmartDoorbell/app/: CMakeLists.txt
SmartDoorbell/app/include/: sound.h
SmartDoorbell/app/src/: camera.c  smart_doorbell.c  sound.c  udp_client.c
SmartDoorbell/hal/include/hal/: encoder.h  joystick.h  uart.h
SmartDoorbell/hal/src/: accelerometer.c  encoder.c  joystick.c
SmartDoorbell/security-system/: package.json  server.js
SmartDoorbell/smart_doorbell_esp/include/: CameraModule.h  NetworkModule.h  WebStreamModule.h
SmartDoorbell/smart_doorbell_esp/src/: main.cpp
SmartDoorbell/smart_doorbell_flipper/: rfid_uart.c
as1/: as1-capture.txt
as1/app/src/: reaction_timer.c
as1/hal/include/hal/: joystick.h  led.h
as1/hal/src/: joystick.c  led.c
as2/: as2-gdb.txt  beagley.toolchain.cmake  noworky.c
as2/app/: CMakeLists.txt
as2/app/include/: dipAnalyzer.h  light_sampler.h  udpServer.h
as2/app/src/: dipAnalyzer.c  light_sampler.c  main.c  udpServer.c
as2/hal/: CMakeLists.txt
as2/hal/include/hal/: adc.h  encoder.h  pwmLed.h
as2/hal/src/: adc.c  dummy.c  encoder.c  pwmLed.c
as3/app/: CMakeLists.txt
as3/app/include/: audioLogic.h  beatbox.h  periodTimer.h  udpServer.h
as3/app/src/: audioLogic.c  audioMixer.c  beatbox.c  main.c  udpServer.c
as3/audioMixer_template/: audioMixer.c
as3/hal/include/hal/: accelerometer.h  adc.h  encoder.h  joystick.h
as3/hal/src/: accelerometer.c  adc.c  encoder.c  joystick.c
